Closed Bug 1689461 Opened 5 years ago Closed 5 years ago

Address book and calendar printing are broken

Categories

(Thunderbird :: General, defect)

defect

Tracking

(thunderbird_esr78 unaffected, thunderbird86 fixed)

RESOLVED FIXED
87 Branch
Tracking Status
thunderbird_esr78 --- unaffected
thunderbird86 --- fixed

People

(Reporter: darktrojan, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

The print engine can't print remote pages such as data: URLs, which calendar uses. I'm also going to convert the address book printing to use a data: URL instead of the insane way it currently works.

The calendar print preview and msgPrintEngine code are not capable of printing remote URLs (ie. data: URLs in this case).

This fixes that and also moves the address book printing code into JS with a blob: URL. The C++ printing code will be removed in a subsequent patch.

The addbook protocol was invented for printing address books and adding vCards to the address book.
It's useless for both of those purposes now and this patch removes it.

Depends on D103432

Target Milestone: --- → 87 Branch

Comment on attachment 9199971 [details]
Bug 1689461 - Fix address book and calendar printing. r?rnons

[Approval Request Comment]
Regression caused by (bug #): tb-fission
User impact if declined: address book and calendar can't be printed
Testing completed (on c-c, etc.): not yet landed
Risk to taking this patch (and alternatives if risky): none that I can think of, I've tested the other uses of the code I'm changing

It should be possible to uplift this patch without the other. But it does depend on bug 1689042 which isn't mine so I'm not requesting approval for it.

Attachment #9199971 - Flags: approval-comm-beta?

(Clearing checkin-needed - open question on phab)

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/abec6012de61
Fix address book and calendar printing. r=rnons
https://hg.mozilla.org/comm-central/rev/81ee7c1eb44a
Remove the addbook protocol. r=rnons

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

Comment on attachment 9199971 [details]
Bug 1689461 - Fix address book and calendar printing. r?rnons

[Triage Comment]
Approved for beta

Attachment #9199971 - Flags: approval-comm-beta? → approval-comm-beta+
Regressions: 1694947
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: