Bug 1689461 - Remove the addbook protocol. r=rnons

The addbook protocol was invented for printing address books and adding vCards to the address book.
It's useless for both of those purposes now and this patch removes it.

Differential Revision: https://phabricator.services.mozilla.com/D103433

--HG--
extra : rebase_source : 52cff44ba99898d8443c92094ba1d35938089d8b
extra : histedit_source : b6a2af2c1c3eb3cfe8030b4588006b1a647eef47